--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ coverage
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+# Build directory (compiled assets)
+build/
+
 # Dependency directories
 node_modules/
 
