feat: release version 1.0.0 with comprehensive documentation
- Add CHANGELOG.md following Keep a Changelog format
- Update version to 1.0.0 in package.json and plugin file
- Update plugin description and author information
- Fix year to 2025 in release dates
- Complete initial release documentation

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "polaroid-generator",
-	"version": "0.1.0",
-	"description": "Example block scaffolded with Create Block tool.",
-	"author": "The WordPress Contributors",
+	"version": "1.0.0",
+	"description": "A WordPress block plugin that creates beautiful polaroid-style photo galleries with dynamic loading animations and customizable captions.",
+	"author": "Martin Nestorov",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
